--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div style="padding: 50px 0 150px;width: 83.33333%;
     max-width: 1335px;
     margin: 0 auto;">
-        <a class="brand">Minimal</a>
+        <!--<a class="brand">Minimal</a>-->
+        <img src="images/brand.png" alt="pc1">
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">Our team</a></li>
@@ -38,11 +39,37 @@
     </div>
 </header>
 <main>
-
-    <article>
-
-    </article>
-
+    <!--<article>-->
+    <!--</article>-->
+    <div>
+        <div style="display: flex;">
+            <img class="show-case" src="images/pc1.jpg" alt="pc1">
+            <img class="show-case" src="images/pc2.jpg" alt="pc1">
+        </div>
+        <div style="width: 83.33333%;
+    max-width: 1335px;
+    margin: 0 auto;
+    padding-top: 150px;
+    display: flex;
+    justify-content: space-between;">
+            <h1 style="width: 30%; padding-right: 10px;box-sizing: border-box;font-size: 30px;
+    line-height: 48.5px;letter-spacing: .04em;font-weight: 100;">Chobani Foodservice</h1>
+            <p style="padding-bottom: 50px;
+    max-width: 50%;
+    font-size: 1rem;
+    letter-spacing: 0.002rem;">While chobani was still in their re-branding process, we moved one step ahead and helped
+                define their
+                digital position through the re-creation of their B2B platform. We created an interactive recipe tool
+                and found playful ways to inform partners of chobani about the wide range of applications of for their
+                greek yogurt.
+            </p>
+            <a style="width: 30%;
+    background-color: transparent;
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 58px;text-align: right;">visit chobani foodservice</a>
+        </div>
+    </div>
 </main>
 
 <!--<footer>-->
