--- a/index.html
+++ b/index.html
@@ -72,9 +72,15 @@
     </div>
 </main>
 
-<!--<footer>-->
-<!--<p>©Copyright 2050 by nobody. All rights reversed.</p>-->
-<!--</footer>-->
+<footer>
+    <div style="padding:100px 0;text-align:center;background-color: #0f0f0f;
+    color: #6f6f6f;">
+        <a href="/jobs" style="color: #6f6f6f;"><span>We're hiring! If you want to work for money, love and beer, apply here.</span></a>
+    </div>
+    <div>
+        <p style="text-align: center;font-size: 12px;">©Copyright 2050 by nobody. All rights reversed.</p>
+    </div>
+</footer>
 
 </body>
 </html>
