remove css from inline and transfer to style

--- a/index.html
+++ b/index.html
@@ -17,69 +17,43 @@
 
 <body>
 <header>
-    <div style="padding: 50px 0 150px;width: 83.33333%;
-    max-width: 1335px;
-    margin: 0 auto;">
-        <!--<a class="brand">Minimal</a>-->
+    <div class="header__skeleton">
         <img src="images/brand.png" alt="pc1">
-        <ul>
+        <ul class="header__skeleton--nav-item">
             <li><a href="#">Home</a></li>
             <li><a href="#">Our team</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
 
-        <h1 style="margin-top: 20vh;
-    line-height: 110%;width: 100%;
-    max-width: 750px;
-    font-size: 60px;
-    overflow: hidden;
-    font-weight: unset;">wild is a design and technology agency based in NYC and Vienna.</h1>
-        <a href="#section-about" style="font-size:12px;border-bottom: 1px solid #000;font-weight: 600;">TELL ME MORE</a>
+        <h1 class="header__skeleton--title">wild is a design and technology agency based in NYC and Vienna.</h1>
+        <a href="#section-about" class="header__skeleton--button">TELL ME MORE</a>
     </div>
 </header>
 <main>
-    <!--<article>-->
-    <!--</article>-->
     <div>
         <div style="display: flex;">
             <img class="show-case" src="images/pc1.jpg" alt="pc1">
             <img class="show-case" src="images/pc2.jpg" alt="pc1">
         </div>
-        <div style="width: 83.33333%;
-    max-width: 1335px;
-    margin: 0 auto;
-    padding-top: 150px;
-    display: flex;
-    justify-content: space-between;">
-            <h1 style="width: 30%; padding-right: 10px;box-sizing: border-box;font-size: 30px;
-    line-height: 48.5px;letter-spacing: .04em;font-weight: 100;">Chobani Foodservice</h1>
-            <p style="padding-bottom: 50px;
-    max-width: 50%;
-    font-size: 1rem;
-    letter-spacing: 0.002rem;">While chobani was still in their re-branding process, we moved one step ahead and helped
-                define their
-                digital position through the re-creation of their B2B platform. We created an interactive recipe tool
-                and found playful ways to inform partners of chobani about the wide range of applications of for their
-                greek yogurt.
+        <div class="section">
+            <h1 class="section__head">Chobani Foodservice</h1>
+            <p class="section__description">While chobani was still in their re-branding process, we moved one step
+                ahead and
+                helped define their digital position through the re-creation of their B2B platform. We created an
+                interactive recipe tool and found playful ways to inform partners of chobani about the wide range of
+                applications of for their greek yogurt.
             </p>
-            <a style="width: 30%;
-    background-color: transparent;
-    text-transform: uppercase;
-    font-size: 12px;
-    line-height: 58px;text-align: right;">visit chobani foodservice</a>
+            <a class="section__link">visit chobani foodservice</a>
         </div>
     </div>
 </main>
 
 <footer>
-    <div style="padding:100px 0;text-align:center;background-color: #0f0f0f;
-    color: #6f6f6f;">
-        <a href="/jobs" style="color: #6f6f6f;"><span>We're hiring! If you want to work for money, love and beer, apply here.</span></a>
+    <div class="footer__section1">
+        <a href="/jobs" class="footer__section1--link"><span>We're hiring! If you want to work for money, love and beer, apply here.</span></a>
     </div>
-    <div>
-        <p style="text-align: center;font-size: 12px;">©Copyright 2050 by nobody. All rights reversed.</p>
-    </div>
+    <p class="footer__section2--copyright">©Copyright 2050 by nobody. All rights reversed.</p>
 </footer>
 
 </body>
