fix reactive live serveer

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Minimalistic website to showcase best practice">
-    <title>Minimal | Best Practices</title>
+    <meta name="Description" content="Css Framework to showcase best practice">
+    <title>Css Framework</title>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="assets/style/css/style.css">
+    <link rel="stylesheet" href="assets/style/css/index.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
     <!--[if lt IE 9]>
@@ -16,45 +16,7 @@
 </head>
 
 <body>
-<header>
-    <div class="header__skeleton">
-        <img src="assets/images/brand.png" alt="pc1">
-        <ul class="header__skeleton--nav-item">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Our team</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-
-        <h1 class="header__skeleton--title">wild is a design and technology agency based in NYC and Vienna.</h1>
-        <a href="#section-about" class="header__skeleton--button">TELL ME MORE</a>
-    </div>
-</header>
-<main>
-    <div>
-        <div style="display: flex;">
-            <img class="show-case" src="assets/images/pc1.jpg" alt="pc1">
-            <img class="show-case" src="assets/images/pc2.jpg" alt="pc1">
-        </div>
-        <div class="section">
-            <h1 class="section__head">Chobani Foodservice</h1>
-            <p class="section__description">While chobani was still in their re-branding process, we moved one step
-                ahead and
-                helped define their digital position through the re-creation of their B2B platform. We created an
-                interactive recipe tool and found playful ways to inform partners of chobani about the wide range of
-                applications of for their greek yogurt.
-            </p>
-            <a class="section__link">visit chobani foodservice</a>
-        </div>
-    </div>
-</main>
-
-<footer>
-    <div class="footer__section1">
-        <a href="/jobs" class="footer__section1--link"><span>We're hiring! If you want to work for money, love and beer, apply here.</span></a>
-    </div>
-    <p class="footer__section2--copyright">©Copyright 2050 by nobody. All rights reversed.</p>
-</footer>
+<h1>Hey</h1>
 
 </body>
 </html>
