--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Description" content="Css Framework to showcase best practice">
     <title>Css Framework</title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="mini/images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="assets/style/css/index.css">
 
