--- a/mini/sandbox.html
+++ b/mini/sandbox.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Description" content="Minimalistic website to showcase best practice">
     <title>Minimal | Best Practices</title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="assets/style/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- the below three lines are a fix to get HTML5 semantic elements working in old versions of Internet Explorer-->
     <!--[if lt IE 9]>
@@ -18,7 +18,7 @@
 <body>
 <header>
     <div class="header__skeleton">
-        <img src="assets/images/brand.png" alt="pc1">
+        <img src="images/brand.png" alt="pc1">
         <ul class="header__skeleton--nav-item">
             <li><a href="#">Home</a></li>
             <li><a href="#">Our team</a></li>
@@ -33,8 +33,8 @@
 <main>
     <div>
         <div style="display: flex;">
-            <img class="show-case" src="assets/images/pc1.jpg" alt="pc1">
-            <img class="show-case" src="assets/images/pc2.jpg" alt="pc1">
+            <img class="show-case" src="images/pc1.jpg" alt="pc1">
+            <img class="show-case" src="images/pc2.jpg" alt="pc1">
         </div>
         <div class="section">
             <h1 class="section__head">Chobani Foodservice</h1>
