update styles and add todo items

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 
 <body>
 <h1>Hey</h1>
-
+<ul>
+    <li>Use gulp</li>
+    <li>SASS compilation</li>
+    <li>OOCSS paradigm</li>
+    <li>Block, Element, Modifier (BEM naming convention)</li>
+</ul>
 </body>
 </html>
