small example on OOCSS

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
     <li>OOCSS paradigm</li>
     <li>Block, Element, Modifier (BEM naming convention)</li>
 </ul>
+<div class="p-3 mb-2 bg-success text-white">.bg-success</div>
+<!--<a class="bg-success">yellow</a>-->
 </body>
 </html>
